# pg-queue

./: Cargo.toml  LICENSE.md
.circleci/: config.yml
benches/: batched_inserts.rs
benches/it/: consumer.rs  main.rs  pipelined_inserts.rs  seq_inserts.rs
examples/: job_pingpong.rs  log_pingpong.rs  pingpong.rs
src/: connection.rs  lib.rs  logs.rs  schema.sql
src/jobs/: error.rs  job.rs  mod.rs  schema.rs  schema.sql
src/logs/: consumer.rs  cursor.rs  mod.rs  producer.rs  schema.sql
tests/: prodcons.rs
tests/integration/: job_worker.rs  main.rs  original_interface.rs  producer_consumer.rs  reusable_connections.rs
