[package]
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
license = "MIT"
name = "pg-queue"
version = "0.1.0"
edition = "2018"

[dependencies]
log = "0.4.8"
tokio-postgres = { version = "0.5.2", features = ["with-chrono-0_4"] }
chrono = "0.4.7"
thiserror = "1.0.9"
tokio = { version = "0.2.24", features = ["sync", "time", "rt-core"] }
futures = "0.3.4"
futures-util = "0.3.4"
tokio-util = "0.4.0"

[dev-dependencies]
env_logger = "0.8.1"
tokio = { version = "0.2.24", features = ["macros"] }
anyhow = "1.0.26"
