[package]
authors = ["Ceri Storey <cez@necrofish.org.uk>"]
license = "MIT"
name = "pg-queue"
version = "0.1.0"
edition = "2018"

[[bench]]
name = "it"
harness = false

[dependencies]
tokio-postgres = { version = "0.7.0", features = ["with-chrono-0_4"] }
chrono = "0.4.7"
thiserror = "1.0.9"
tokio = { version = "1.0.1", features = ["sync", "rt"] }
futures = "0.3.4"
futures-util = "0.3.4"
tokio-util = "0.6.0"
tracing = "0.1.25"
bytes = "1.0.1"

[dev-dependencies]
tokio = { version = "1.0.1", features = ["macros", "rt"] }
anyhow = "1.0.26"
tracing-subscriber = "0.2.17"
tracing-log = "0.1.2"
criterion = { version = "0.3.4", features = ["html_reports"] }
rand = "0.8.3"
serde_json = "1.0.64"

[profile.dev]
split-debuginfo = "unpacked"
